# runtime-runway

./: .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MILESTONES.md  README.md  SECURITY.md  audit.toml  clippy.toml  cloudbuild.api-server.yaml  justfile  rust-toolchain.toml
.cargo/: config.toml.example
.claude/skills/audit/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/done/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/focus/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/ticket/: SKILL.md
.claude/skills/wip/: SKILL.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.yml  feature_request.md  question.yml
.github/workflows/: ci.yml  contract-staging.yml  contract.yml  release.yml  security.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: agents.rs  config.rs  evals.rs  llm_backend.rs  main.rs  packs.rs  streaming.rs
crates/application/src/ui/: app.rs  mod.rs  views.rs
crates/llm/: Cargo.toml  ROADMAP.md  build.rs
crates/llm/benches/: recall_benchmarks.rs
crates/llm/examples/: contract_stress.rs  golden_test.rs  inference_agent.rs  local_inference.rs  phase4a_analysis.rs
crates/llm/examples/gemma-inference/: Cargo.toml
crates/llm/examples/gemma-inference/src/: main.rs
crates/llm/examples/local-inference/: Cargo.toml  README.md
crates/llm/examples/local-inference/src/: main.rs
crates/llm/proto/: kernel.proto
crates/llm/src/: adapter.rs  adapter_registry.rs  adversarial.rs  agent.rs  anthropic.rs  backend.rs  bridge.rs  chain.rs  config.rs  contract_stress.rs  engine.rs  error.rs  execution_plan.rs  gemma.rs  grpc_backend.rs  inference.rs  kernel.rs  lib.rs  lora.rs  lora_merge.rs  model.rs  observability.rs  prompt.rs  prompt_dsl.rs  provider.rs  storage_registry.rs  tokenizer.rs  trace.rs  validation.rs
crates/llm/src/recall/: corpus.rs  embedder.rs  embedder_hash.rs  embedder_semantic.rs  mod.rs  normalizer.rs  pii.rs  provider.rs  provider_persistent.rs  types.rs
crates/llm/src/server/: convert.rs  health.rs  mod.rs  service.rs  streaming.rs
crates/runway-accounts/: Cargo.toml
crates/runway-accounts/src/: claims.rs  config.rs  domain.rs  error.rs  lib.rs  store.rs  stripe.rs
crates/runway-accounts/src/http/: accounts.rs  billing.rs  invites.rs  members.rs  mod.rs  orgs.rs
crates/runway-app-host/: Cargo.toml
crates/runway-app-host/src/: approvals.rs  builder.rs  config.rs  context.rs  health.rs  lib.rs  module.rs  realtime.rs  sse.rs
crates/runway-app-host/tests/: contract_test.rs
crates/runway-auth/: Cargo.toml
crates/runway-auth/src/: firebase.rs  lib.rs  middleware.rs
crates/runway-middleware/: Cargo.toml
crates/runway-middleware/src/: lib.rs
crates/runway-secrets/: Cargo.toml
crates/runway-secrets/src/: lib.rs  metadata.rs
crates/runway-storage/: Cargo.toml
crates/runway-storage-contract/: Cargo.toml
crates/runway-storage-contract/src/: document.rs  embedding.rs  event.rs  harness.rs  lib.rs  object.rs  vector.rs
crates/runway-storage/src/: endpoints.rs  lib.rs
crates/runway-storage/src/embedding/: local.rs  mod.rs  vertex.rs
crates/runway-storage/src/local/: document.rs  event.rs  mod.rs  object.rs  sync.rs  vector.rs
crates/runway-storage/src/remote/: document.rs  event.rs  mod.rs  object.rs  vector.rs
crates/runway-storage/src/traits/: document.rs  embedding.rs  event.rs  mod.rs  object.rs  vector.rs
crates/runway-storage/tests/: contract_emulator.rs  contract_local.rs  contract_real_gcp.rs  docker-compose.contract.yml
crates/runway-telemetry/: Cargo.toml
crates/runway-telemetry/src/: lib.rs
docker/: Dockerfile  Dockerfile.api-server  Dockerfile.math-base  README.md  cloudbuild.math-base.yaml  compose.yaml
docs/superpowers/plans/: 2026-05-23-runtime-config-consolidation.md  2026-05-26-runway-storage-contract-tests.md  2026-05-28-runway-helm-app-host-boundary.md  2026-05-30-recover-lost-functionality.md
docs/superpowers/specs/: 2026-05-26-runway-storage-contract-tests-design.md  2026-05-28-runway-helm-app-host-boundary-design.md
kb/: Home.md  INDEX.md  LOG.md
kb/Architecture/: App Execution Container.md  Application.md  Commerce Rails Boundary.md  Crate Map.md  Movement Boundary.md  Security.md  URL Model.md
kb/Building/: Deployment.md  Docker.md
kb/History/: CHANGELOG.md
kb/Operations/: Secrets.md
kb/Stack/: Burn and Local LLM.md
kb/Workflow/: Daily Journey.md
ops/deploy/gpu/cloudrun/: Dockerfile  README.md  deploy.sh
ops/deploy/gpu/modal/: README.md  converge_llm_worker.py
ops/deploy/gpu/runpod/: Dockerfile  README.md  start-worker.sh
ops/infra/firebase/: .firebaserc.example  firestore.indexes.json  firestore.rules  storage.rules
ops/infra/firebase/apps/: .firebaserc  .gitignore  firebase.json
ops/infra/firebase/apps/public/: apps.json  index.html
ops/infra/scripts/: bootstrap.sh  provision-auth.sh  publish-release.sh
ops/infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
ops/infra/terraform/environments/: prod.tfvars  staging.tfvars
ops/infra/terraform/modules/apis/: main.tf  outputs.tf
ops/infra/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
ops/infra/terraform/modules/firestore/: main.tf
ops/infra/terraform/modules/memorystore/: main.tf  outputs.tf  (+1 more)
ops/scripts/: deploy-api-server.sh  deploy-catalyst-backend.sh  deploy-cloud-run.sh  dev-down.sh  dev-up.sh  extract-criterion-baseline.py  gcp-setup.sh  register-app.sh  smoke-test.sh  validate-security-docs.sh
ops/scripts/ollama/: mac-ollama-smoke.sh  mac-ollama-up.sh
ops/scripts/workflow/: focus.sh  status.sh  sync.sh
scripts/ci/: checkout-reflective-siblings.sh
(+13 files in other folders)
