[workspace]
resolver = "2"
members = [
    "crates/application",
    "crates/llm",
]

[workspace.package]
version = "3.4.0"
edition = "2024"
rust-version = "1.94.0"
license = "LicenseRef-Proprietary"
repository = "https://github.com/Reflective-Lab/runway"
publish = false

[workspace.dependencies]
# Converge crates — path to sibling repo
converge-model = { path = "../converge/crates/model" }
converge-pack = { path = "../converge/crates/pack", features = ["strum"] }
converge-protocol = { path = "../converge/crates/protocol" }
converge-kernel = { path = "../converge/crates/kernel" }
converge-client = { path = "../converge/crates/client" }
converge-core = { path = "../converge/crates/core" }
converge-provider-api = { path = "../converge/crates/provider-api" }
converge-provider = { path = "../converge/crates/provider" }
converge-domain = { path = "../converge/crates/domain" }
converge-experience = { path = "../converge/crates/experience" }
converge-knowledge = { path = "../converge/crates/knowledge" }
converge-optimization = { path = "../converge/crates/optimization" }
converge-analytics = { path = "../converge/crates/analytics" }
converge-policy = { path = "../converge/crates/policy" }
converge-runtime = { path = "../converge/crates/runtime" }
converge-storage = { path = "../converge/crates/storage", default-features = false }

# Internal
converge-llm = { path = "crates/llm" }
converge-application = { path = "crates/application" }

# Shared dependencies (versions aligned with converge workspace)
anyhow = "1"
async-trait = "0.1"
blake3 = "1.5"
burn = { version = "0.20.0", features = ["ndarray", "train"] }
burn-store = { version = "0.20.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
config = "0.14"
crossterm = "0.28"
dotenv = "0.15"
encoding_rs = "0.8"
fastembed = "4"
futures = "0.3"
hostname = "0.4"
llama-burn = { git = "https://github.com/tracel-ai/models", package = "llama-burn", default-features = false }
llama-cpp-2 = { version = "0.1.143", default-features = false, features = ["metal"] }
once_cell = "1.19"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tiktoken-rs = "0.5"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
ignore_without_reason = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
semicolon_if_nothing_returned = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
too_many_arguments = "allow"
unused_async = "allow"

[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[profile.release]
codegen-units = 1
lto = true
