[workspace]
resolver = "2"
members = [
    "crates/api-server",
    "crates/application",
    "crates/llm",
    "crates/runway-auth",
    "crates/runway-middleware",
    "crates/runway-secrets",
    "crates/runway-storage",
    "crates/runway-telemetry",
]

[workspace.package]
version = "3.4.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/runway"

[workspace.dependencies]
# Converge crates — pinned to a specific GitHub release tag by default.
# For local SDK work, copy `.cargo/config.toml.example` to `.cargo/config.toml`
# or run `just use-local-converge`.
converge-model = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-pack = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0", features = ["strum"] }
converge-protocol = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-kernel = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-client = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-core = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-provider-api = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-provider = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-domain = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-experience = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-knowledge = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-optimization = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-analytics = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-policy = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0" }
converge-storage = { git = "https://github.com/Reflective-Lab/converge", tag = "v3.4.0", default-features = false }

# Internal
converge-llm = { path = "crates/llm" }
converge-application = { path = "crates/application" }
runway-auth = { path = "crates/runway-auth" }
runway-middleware = { path = "crates/runway-middleware" }
runway-secrets = { path = "crates/runway-secrets" }
runway-storage = { path = "crates/runway-storage" }
runway-telemetry = { path = "crates/runway-telemetry" }

# Shared dependencies (versions aligned with converge workspace)
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
opentelemetry = { version = "0.23", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "reqwest-client", "tls"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "trace"] }
secrecy = { version = "0.8", features = ["serde"] }
sentry = { version = "0.33", features = ["tracing", "tower", "tower-axum-matched-path"] }
redb = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["request-id", "trace", "cors", "compression-gzip"] }
tracing-opentelemetry = "0.24"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1.5"
burn = { version = "0.20.0", features = ["ndarray", "train"] }
burn-store = { version = "0.20.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
config = "0.14"
crossterm = "0.28"
dotenv = "0.15"
encoding_rs = "0.8"
fastembed = "4"
futures = "0.3"
hostname = "0.4"
# Upstream head moved to Burn 0.21 pre-releases; pin the last Burn 0.20-compatible rev.
llama-burn = { git = "https://github.com/tracel-ai/models", rev = "42a453dfec66d20ff66d35801dca10d9a998182f", package = "llama-burn", default-features = false }
llama-cpp-2 = { version = "0.1.143", default-features = false, features = ["metal"] }
once_cell = "1.19"
proptest = "1.5"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.5"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
ignore_without_reason = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
semicolon_if_nothing_returned = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
too_many_arguments = "allow"
unused_async = "allow"
unused_self = "allow"
field_reassign_with_default = "allow"
float_cmp = "allow"
approx_constant = "allow"
unnecessary_to_owned = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
struct_excessive_bools = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_sort_by = "allow"
default_trait_access = "allow"

[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[profile.release]
codegen-units = 1
lto = true
