[package]
name = "api-server"
description = "Runtime Runway reference Cloud Run server — wires all five runway-* crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
commerce-rails-stripe = { workspace = true }
runway-accounts = { path = "../runway-accounts", version = "3.4.2" }
runway-auth = { path = "../runway-auth", version = "3.4.2" }
runway-middleware = { path = "../runway-middleware", version = "3.4.2" }
runway-secrets = { path = "../runway-secrets", version = "3.4.2" }
runway-storage = { path = "../runway-storage", version = "3.4.2" }
runway-telemetry = { path = "../runway-telemetry", version = "3.4.2" }

anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
