[package]
name = "runway-accounts"
description = "Account, organisation, and billing management for the Reflective platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
commerce-rails-stripe.workspace = true
runway-auth = { path = "../runway-auth", version = "3.4.2" }
runway-secrets = { path = "../runway-secrets", version = "3.4.2" }
runway-storage = { path = "../runway-storage", version = "3.4.2" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
