[package]
name = "runway-storage-contract"
description = "Contract test suite for runway-storage. Asserts equivalence and shape parity across backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
runway-storage = { path = "../runway-storage", version = "3.4.2" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
